# telegram-notes-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routing.py
app/api/middlewares/: access.py
app/api/notes/: constants.py  debounce.py  handlers.py
app/core/intent/: constants.py  service.py
app/core/llm/: client.py  prompts.py  schemas.py
app/core/notes/: constants.py  dto.py  service.py
app/core/reminders/: constants.py  dto.py  service.py
app/core/search/: constants.py  service.py
app/di/: container.py
app/infra/git/: constants.py  sync.py
app/infra/reminders/: storage.py
app/infra/vault/: constants.py  repository.py
settings/: __init__.py  config.py
tests/: test_notes.py
